--- a/visbor.html
+++ b/visbor.html
@@ -8,8 +8,8 @@
    <a name="begin"></a>
    <h1> Юрий Визбор</h1>
    <h2>Вечно студент</h2>
-   <p><a href="vechno_student.html#1"title="#1">читать сначала</a>
+   <p><a href="vechno_student.html#1">читать сначала</a>
 
-   <p><a href="vechno_student.html#6"title="#6">читать с последнего абзаца</a></p>
+   <p><a href="vechno_student.html#6">читать с последнего абзаца</a></p>
   
 </body>
