--- a/HW1/visbor.html
+++ b/HW1/visbor.html
@@ -8,7 +8,7 @@
    <a name="begin"></a>
    <h1> Юрий Визбор</h1>
    <h2>Вечно студент</h2>
-   <p><a href="vechno_student.html#1">читать сначала</a>
+   <p><a href="vechno_student.html#1"<span style="text-decoration:none">читать сначала</span></a>
 
    <p><a href="vechno_student.html#6">читать с последнего абзаца</a></p>
   
