--- a/Potter/Potter-2.html
+++ b/Potter/Potter-2.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
-<body style="font-size:  80%;">
+<body style="font-size:  120%; width: 80%;">
     
     <h1 align="center"; style="font-family:Merriweather; font-weight: 900 ;" >
         Серия романов о Гарри Потере</h1>
@@ -23,7 +23,7 @@
     <div style="font-family: Rubik;font-weight: 900;">
         <p align="center" "><img src="potter-all.jpg" width="400"></p>
 
-        <p style="text-indent: 1cm; "><strong>Самая знаменитая сага новейшего времени разошлась рекордным тиражом - 
+        <p style="text-indent: 1cm;  "><strong>Самая знаменитая сага новейшего времени разошлась рекордным тиражом - 
             <span style="text-decoration: underline;">более 400 миллионов экземпляров</span>
              на 68 языках (включая эсперанто, древнегреческий и латынь). Книги Роулинг сумели оторвать детей и взрослых от экранов компьютеров
              и стали мощнейшим импульсом для интереса к чтению в современную эпоху. </strong></p>
