--- a/Potter/Potter-2.html
+++ b/Potter/Potter-2.html
@@ -35,7 +35,7 @@
     <a href="potter -3.jpg">читать третью книгу</a></p>
    </div>
 
-    <div style="font-family: Pacifico, serif;">
+    <div style="font-family: Pacifico, serif">
              <p style="text-indent: 1cm;"><span style="color: red;">Жизнь</span> 
              десятилетнего Гарри Поттера нельзя назвать сладкой: его родители умерли, едва ему исполнился год,
              а от дяди и тётки, взявших сироту на воспитание, достаются лишь тычки да подзатыльники. Но в одиннадцатый день рождения Гарри всё меняется. 
@@ -57,7 +57,7 @@
 
         <p><img src="potter -2.jpg" width="180"></p>
 
-    <div style="font-family: Oswald, serif;">    
+    <div style="font-family: Oswald, serif">    
            <p style="text-indent: 1cm;">
             <span style="color: red;">Двенадцать</span> 
              долгих лет в Азкабане - мрачной тюрьме волшебного мира - содержался всем известный узник по имени Сириус Блэк.
