--- a/HW4/DIV_FRAME.html
+++ b/HW4/DIV_FRAME.html
@@ -6,23 +6,31 @@
     <title>DIV_FRAME</title>
 </head>
 <body>
-    <div style="background: url(ramka_6_left.png) repeat-y; ">
-    <div style="background: url(ramka_7_right.png)  repeat-y;">    
-    <div style="background: url(ramka_5_left_top.png) no-repeat left top;">
-    <div style="background: url(ramka_8_right_top.png) no-repeat right bottom;">
-    <div style="background: url(ramka_4_left_bottom.png) no-repeat left bottom">
-    <div style="background: url(ramka_3_right_bottom.png) no-repeat right bottom;">
-    <div style="background: url(ramka_2_bottom.png) repeat-y">
-    <div style="background: url(ramka_1_top.png) repeat-y;">
-    <div style="padding-left: 10px;font-size: justify; border: solid transparent 1px">   
+    <div style="background: url(ramka_6_left.png) repeat-y; background-position:left center;">
+    <div style="background: url(ramka_7_right.png)  repeat-y;background-position: right center;">    
+    <div style="background: url(ramka_5_left_top.png) no-repeat left top; background-position: left top; ">
+    <div style="background: url(ramka_8_right_top.png) no-repeat right bottom;background-position: right top;">
+    <div style="background: url(ramka_4_left_bottom.png) no-repeat left bottom;background-position: left bottom;">
+    <div style="background: url(ramka_3_right_bottom.png) no-repeat right bottom;background-position: right bottom;">
+    <div style="background: url(ramka_2_bottom.png) repeat-x;background-position: bottom center">
+    <div style="background: url(ramka_1_top.png) repeat-x;background-position: top center">
+    <div style="padding-left: 10px;border: solid transparent 1px">   
 
-        <p style="text-align: justify; white-space: pre; line-height: 150%;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-            consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse 
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p style="text-align: center; line-height: 150%; font-family: 'Times New Roman', Times, serif; padding: 25px40p25px25px;">
+            Two households, both alike in dignity,<br>
+            In fair Verona, where we lay our scene,<br>
+            From ancient grudge break to new mutiny,<br>
+            Where civil blood makes civil hands unclean.<br>
+            From forth the fatal loins of these two foes<br>
+            A pair of star-cross'd lovers take their life;<br>
+            Whose misadventured piteous overthrows<br>
+            Do with their death bury their parents' strife.<br>
+            The fearful passage of their death-mark'd love,<br>
+            And the continuance of their parents' rage,<br>
+            Which, but their children's end, nought could remove,<br>
+            Is now the two hours' traffic of our stage;<br>
+            The which if you with patient ears attend,<br>
+            What here shall miss, our toil shall strive to mend.</p>
 
     </div></div></div></div></div></div></div></div></div>
 </body>
