--- a/HW4/DIV_FRAME.html
+++ b/HW4/DIV_FRAME.html
@@ -6,14 +6,14 @@
     <title>DIV_FRAME</title>
 </head>
 <body>
-    <div style="background: url(ramka_6_left.png) repeat-y; background-position:left center;">
-    <div style="background: url(ramka_7_right.png)  repeat-y;background-position: right center;">    
-    <div style="background: url(ramka_5_left_top.png) no-repeat left top; background-position: left top; ">
-    <div style="background: url(ramka_8_right_top.png) no-repeat right bottom;background-position: right top;">
-    <div style="background: url(ramka_4_left_bottom.png) no-repeat left bottom;background-position: left bottom;">
-    <div style="background: url(ramka_3_right_bottom.png) no-repeat right bottom;background-position: right bottom;">
-    <div style="background: url(ramka_2_bottom.png) repeat-x;background-position: bottom center">
-    <div style="background: url(ramka_1_top.png) repeat-x;background-position: top center">
+    <div style="background: url(ramka_6_left.png) repeat-x; background-position: center left;">
+    <div style="background: url(ramka_7_right.png)  repeat-x;background-position:  center right;">    
+    <div style="background: url(ramka_5_left_top.png) no-repeat; background-position: left top; ">
+    <div style="background: url(ramka_8_right_top.png) no-repeat ;background-position: right top;">
+    <div style="background: url(ramka_4_left_bottom.png) no-repeat ;background-position: left bottom;">
+    <div style="background: url(ramka_3_right_bottom.png) no-repeat ;background-position: right bottom;">
+    <div style="background: url(ramka_2_bottom.png) repeat-y;background-position:  center bottom">
+    <div style="background: url(ramka_1_top.png) repeat-y;background-position: center top">
     <div style="padding-left: 10px;border: solid transparent 1px">   
 
         <p style="text-align: center; line-height: 150%; font-family: 'Times New Roman', Times, serif; padding: 25px40p25px25px;">
