--- a/HW4/DIV_FRAME.html
+++ b/HW4/DIV_FRAME.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DIV_FRAME</title>
+    <title>DIV FRAME</title>
 </head>
 <body>
     <div style="background: url(ramka_6_left.png) repeat-y; background-position: center left">
