--- a/HW4/DIV_FRAME.html
+++ b/HW4/DIV_FRAME.html
@@ -16,7 +16,7 @@
     <div style="background: url(ramka_1_top.png) repeat-y;background-position: center top;"> -->
     <div style="padding-left: 10px;border: solid transparent 1px">   
 
-        <p style="text-align: center; line-height: 150%; font-family: 'Times New Roman', Times, serif; padding: 25px40p25px25px;">
+        <p style="text-align: center; line-height: 150%; font-family: 'Times New Roman', Times, serif; padding-top: 55px;padding-bottom: 55px; padding-left: 80px;padding-right: 80px;">
             Two households, both alike in dignity,<br>
             In fair Verona, where we lay our scene,<br>
             From ancient grudge break to new mutiny,<br>
