--- a/HW4/DIV_FRAME.html
+++ b/HW4/DIV_FRAME.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DIV FRAME</title>
+    <title>ROMEO & JULIET</title>
 </head>
 <body style="margin-left: 15px; margin-right: 15px;">
     <div style="background: url(ramka_6_left.png) repeat-y; background-position: center left">
@@ -12,11 +12,12 @@
     <div style="background: url(ramka_8_right_top.png) no-repeat ;background-position: right top;">
     <div style="background: url(ramka_4_left_bottom.png) no-repeat ;background-position: left bottom;">
     <div style="background: url(ramka_3_right_bottom.png) no-repeat ;background-position: right bottom;">
-    <!-- <div style="background: url(ramka_2_bottom.png) repeat-y;background-position:  center bottom">
-    <div style="background: url(ramka_1_top.png) repeat-y;background-position: center top;"> -->
+    <!-- <div style="background: url(ramka_2_bottom.png) repeat-x;background-position:  center bottom">
+    <div style="background: url(ramka_1_top.png) repeat-x;background-position: center top;"> -->
     <div style="padding-left: 10px;border: solid transparent 1px">   
 
-        <p style="text-align: center; line-height: 150%; font-family: 'Times New Roman', Times, serif; padding-top: 55px;padding-bottom: 55px; padding-left: 80px;padding-right: 80px;">
+        <h2 style="text-align: center;padding-top: 55px;padding-bottom: 55px; padding-left: 80px;padding-right: 80px;">ROMEO &AMP; JULIET</h2>
+        <p style="text-align: center; line-height: 150%; font-family: 'Times New Roman', Times, serif; padding-top: 5px;padding-bottom: 5px; padding-left: 80px;padding-right: 80px;">
             Two households, both alike in dignity,<br>
             In fair Verona, where we lay our scene,<br>
             From ancient grudge break to new mutiny,<br>
@@ -31,6 +32,21 @@
             Is now the two hours' traffic of our stage;<br>
             The which if you with patient ears attend,<br>
             What here shall miss, our toil shall strive to mend.</p>
+
+           
+<p style="text-align: center; line-height: 150%; font-family: 'Times New Roman', Times, serif; padding-top: 10px;padding-bottom: 55px; padding-left: 80px;padding-right: 80px;">
+<span style="font-family: 'Times New Roman', Times, serif; font-weight: bold;">ROMEO</span>
+Why, such is love's transgression.<br>
+Griefs of mine own lie heavy in my breast,<br>
+Which thou wilt propagate, to have it prest<br>
+With more of thine: this love that thou hast shown<br>
+Doth add more grief to too much of mine own.<br>
+Love is a smoke raised with the fume of sighs;<br>
+Being purged, a fire sparkling in lovers' eyes;<br>
+Being vex'd a sea nourish'd with lovers' tears:<br>
+What is it else? a madness most discreet,<br>
+A choking gall and a preserving sweet.<br>
+Farewell, my coz.</p>
 
     </div></div></div></div></div></div></div></div></div>
 </body>
