--- a/HW4/DIV_FRAME.html
+++ b/HW4/DIV_FRAME.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
     <title>ROMEO & JULIET</title>
 </head>
 <body style="margin-left: 15px; margin-right: 15px;">
@@ -15,7 +16,14 @@
     <!-- <div style="background: url(ramka_2_bottom.png) repeat-x;background-position:  center bottom">
     <div style="background: url(ramka_1_top.png) repeat-x;background-position: center top;"> -->
     <div style="padding-left: 10px;border: solid transparent 1px">   
-
+        <p style="text-align: justify; font: italic bold 20px/200% Arial;line-height: 125%;padding-left: 100px; padding-right: 100px; padding-top: 55px;">
+            William Shakespeare (bapt.Tooltip baptised 26 April 1564 – 23 April 1616) was an English playwright, poet and actor.
+            He is widely regarded as the greatest writer in the English language and the world's pre-eminent dramatist.
+            He is often called England's national poet and the "Bard of Avon" (or simply "the Bard"). His extant works, including collaborations,
+            consist of some 39 plays, 154 sonnets, three long narrative poems, and a few other verses, some of uncertain authorship. His plays have
+            been translated into every major living language and are performed more often than those of any other playwright. Shakespeare remains
+            arguably the most influential writer in the English language, and his works continue to be studied and reinterpreted.
+        </p>
         <h2 style="text-align: center;padding-top: 55px;padding-bottom: 55px; padding-left: 80px;padding-right: 80px;">ROMEO &AMP; JULIET</h2>
         <p style="text-align: center; line-height: 150%; font-family: 'Times New Roman', Times, serif; padding-top: 5px;padding-bottom: 5px; padding-left: 80px;padding-right: 80px;">
             Two households, both alike in dignity,<br>
