--- a/HW4/DIV_FRAME.html
+++ b/HW4/DIV_FRAME.html
@@ -8,13 +8,14 @@
 </head>
 <body style="margin-left: 15px; margin-right: 15px;">
     <div style="background: url(ramka_6_left.png) repeat-y; background-position: center left">
-    <div style="background: url(ramka_7_right.png)  repeat-y;background-position:  center right;">    
+    <div style="background: url(ramka_7_right.png)  repeat-y;background-position:  center right;">  
+    <div style="background: url(ramka_2_bottom.png) repeat-x;background-position:  center bottom">
+    <div style="background: url(ramka_1_top.png) repeat-x;background-position: center top;"> 
     <div style="background: url(ramka_5_left_top.png) no-repeat; background-position: left top; ">
     <div style="background: url(ramka_8_right_top.png) no-repeat ;background-position: right top;">
     <div style="background: url(ramka_4_left_bottom.png) no-repeat ;background-position: left bottom;">
     <div style="background: url(ramka_3_right_bottom.png) no-repeat ;background-position: right bottom;">
-    <!-- <div style="background: url(ramka_2_bottom.png) repeat-x;background-position:  center bottom">
-    <div style="background: url(ramka_1_top.png) repeat-x;background-position: center top;"> -->
+   
     <div style="padding-left: 10px;border: solid transparent 1px">   
         <p style="text-align: justify; font: italic bold 20px/200% Arial;line-height: 125%;padding-left: 100px; padding-right: 100px; padding-top: 55px;">
             William Shakespeare (bapt.Tooltip baptised 26 April 1564 – 23 April 1616) was an English playwright, poet and actor.
