--- a/HW4/DIV_FRAME.html
+++ b/HW4/DIV_FRAME.html
@@ -6,15 +6,16 @@
    
     <title>ROMEO & JULIET</title>
 </head>
-<body style="margin-left: 15px; margin-right: 15px;">
-    <div style="background: url(ramka_6_left.png) repeat-y; background-position: center left">
-    <div style="background: url(ramka_7_right.png)  repeat-y;background-position:  center right;">    
-    <div style="background: url(ramka_5_left_top.png) no-repeat; background-position: left top; ">
-    <div style="background: url(ramka_8_right_top.png) no-repeat ;background-position: right top;">
-    <div style="background: url(ramka_4_left_bottom.png) no-repeat ;background-position: left bottom;">
-    <div style="background: url(ramka_3_right_bottom.png) no-repeat ;background-position: right bottom;">
-    <!-- <div style="background: url(ramka_2_bottom.png) repeat-x;background-position:  center bottom">
-    <div style="background: url(ramka_1_top.png) repeat-x;background-position: center top;"> -->
+<body style="margin-left: 5px; margin-right: 5px; margin-top:  5px; margin-bottom: 5px; ">
+    <div style="background: url(left.png) repeat-y; background-position: center left;">
+    <div style="background: url(right.png)  repeat-y;background-position:  center right;"> 
+    <div style="background: url(bottom.png) repeat-x;background-position:  center bottom;">
+    <div style="background: url(top.png) repeat-x;background-position: center top; "> 
+    <div style="background: url(left\ top.png) no-repeat; background-position: left top; ">
+    <div style="background: url(right\ top.png) no-repeat ;background-position: right top;">
+    <div style="background: url(left\ bottom.png) no-repeat ;background-position: left bottom;">
+    <div style="background: url(right\ bottom.png) no-repeat ;background-position: right bottom;">
+    
     <div style="padding-left: 10px;border: solid transparent 1px">   
         <p style="text-align: justify; font: italic bold 20px/200% Arial;line-height: 125%;padding-left: 100px; padding-right: 100px; padding-top: 55px;">
             William Shakespeare (bapt.Tooltip baptised 26 April 1564 – 23 April 1616) was an English playwright, poet and actor.
@@ -58,7 +59,4 @@ Farewell, my coz.</p>
 
     </div></div></div></div></div></div></div></div></div>
 </body>
-</html>
-</html>
-</html>
 </html>
