--- a/Simon.html
+++ b/Simon.html
@@ -13,7 +13,11 @@
     </div>
     
 <div style="width:  50%; border: 2px solid blue;color: blue; font-style: Roboto;cursive; border-style: solid border-left; padding-left: 25px; padding-right: 15px; white-space: pre-wrap;background-image: url('SG1998.jpg'); background-repeat: no-repeat; background-position: center;">
-   <p style="text-align: right;">В 1964 году на лейбле Columbia был выпущен их дебютный альбом&quot;
+   
+   
+    <p style="text-align: right;">
+        
+        <img src="sax.jpg" style="float: right;"> В 1964 году на лейбле Columbia был выпущен их дебютный альбом&quot;
      <span style="white-space: nowrap;">Wednethday Morning 3AM &quot;</span>   был выпущен их дебютный альбом . 
     Пластинка прошла практически незамеченной, после чего пути музыкантов пошли врозь.</p>
    <p style="text-align: center;">В это время на долю музыкантов выпал неожиданный успех. Летом 1965 года импресарио Тим Уилсон, 
