--- a/MAKET_ABS.html
+++ b/MAKET_ABS.html
@@ -85,9 +85,9 @@
     @media screen and (max-width:900px){
     .images {
     
-    padding:20px;
+    padding:20px 0px;
     height:350px;
-    width:500px;
+    width:400px;
     text-align:center;
       }
     }
