--- a/Homeworks/Afisha/Afisha.html
+++ b/Homeworks/Afisha/Afisha.html
@@ -1,5 +1,7 @@
 
 
+
+
 <head>
     <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/d23624fc6e.js" crossorigin="anonymous"></script>
@@ -15,15 +17,15 @@
           <div class="mask">
           <a href="" style="text-decoration: none;list-style: none; color: aliceblue;" >Сайт Концертно-Информационных Программ </a>
       
-          <i class="fa-solid fa-masks-theater"></i>
+          <i class="fa-solid fa-masks-theater" ></i>
    
           </div>
           <div class="href">
-           <a href="" style="text-decoration: none;list-style: none; color: aliceblue;">Афиша </a>
+           <a href="" >Афиша </a>
            <i class="fa-solid fa-diamond"></i>
-           <a href="" style="text-decoration: none;list-style: none; color: aliceblue;">Заказ билетов </a>
+           <a href="" >Заказ билетов </a>
            <i class="fa-solid fa-diamond"></i>
-           <a href="" style="text-decoration: none;list-style: none; color: aliceblue;">Контакты </a>
+           <a href="" >Контакты </a>
           </div>
           </div>
         <div class="body">
@@ -118,7 +120,4 @@
         </div>
     </div>
   </main>
-  </body>
-
-  
   </body>
