--- a/Homeworks/FLEX_HW/FLEX_HW.html
+++ b/Homeworks/FLEX_HW/FLEX_HW.html
@@ -38,7 +38,7 @@
 
         <div class="content">
 
-            <div class="Card">
+            <div class="Belarus">
                 <h4>Гостиница Беларусь</h4>
                 <img src="HotelBelarus.jpg">
                 <ul>
@@ -51,7 +51,7 @@
 
             </div>
 
-            <div class="Card">
+            <div class="Marriot">
                 <h4>Минск Марриот Отель</h4>
                 <img src="Marriot.jpg">
                 <ul>
@@ -65,7 +65,7 @@
 
             </div>
 
-            <div class="Card">
+            <div class="DoubleTree">
                 <h4>DoubleTree by Hilton Hotel Minsk</h4>
                 <img    src="DoubleTree_By_Hilton.jpg">
                 <ul>
@@ -79,7 +79,7 @@
 
             </div>
 
-            <div class="Card">
+            <div class="Atlantis">
                 <h4>Отель Atlantis The Palm 5* - Дубаи</h4>
              <img src="Sea.jpg">
                 <ul>
@@ -91,7 +91,7 @@
 
             </div>
 
-            <div class="Card">
+            <div class="Burj">
                 <h4>Burj AI Arab Jumeirah- Дубаи</h4>
                 <img src="Dubai.jpg">
                    <ul>
@@ -103,7 +103,7 @@
 
             </div>
 
-            <div class="Card">
+            <div class="Country-side">
                 <h4>Усадьба Треугольный дом шалаш</h4>
                 <img src="Country-side.jpg">
                    <ul>
