--- a/Homeworks/HW2.html
+++ b/Homeworks/HW2.html
@@ -31,6 +31,9 @@
 // 	case 'en':
 // 		console.log('анг');
 // 		break;
+//  case 'de':
+// 		console.log('нем');
+// 		break;
 	
 // 	default:
 // 		console.log('язык не поддерживается');
@@ -127,51 +130,34 @@
 
 
 
+function f(){
+
 let name = prompt("Какой жанр предпочитаете? 1 - Роман, 2 -Детектив, 3 -  Фентези");
-   
-switch(name){
-    case 1:
-        alert(" Роман");
-        break;
-    case 2:
-    alert(" Детектив"); 
-    break;  
-    case 3:
-    alert(" Фентези");  
-    break; 
-}
+
+if (name != 1 && name !=2 && name !=3 ) return 'Вы ввели недопустимое значение. Пожалуйста, повоторите попытку';
 
 let userQuestion1 = confirm("Предпочитаете современную литературу?");
 let userQuestion2 = confirm("Хотели бы книгу русского автора?");
-
-
-
-if ( name==1   && !userQuestion1 && userQuestion2 == true){
-
-    console.log (`Предлагаем вам почитать - "Война и мир" `);
-
-} else if (name==3 && userQuestion1 == true && userQuestion2 == true){
-
-console.log (`Предлагаем вам почитать - "Ночной дозор" `);
-
+ 
+if (name==1   && !userQuestion1 && userQuestion2 == true){
+    return `Предлагаем вам почитать - "Война и мир" `;
+}else if (name==3 && userQuestion1 == true && userQuestion2 == true){
+    return `Предлагаем вам почитать - "Ночной дозор" `;
 } else  if (name==3 && userQuestion1 == true && userQuestion2 == false){
-
-console.log (`Предлагаем вам почитать - "Гарри Поттер" `);
-
+    return `Предлагаем вам почитать - "Гарри Поттер" `;
 }else if (name==2 && !userQuestion1 && userQuestion2 == false){
-
-console.log (`Предлагаем вам почитать - "Шерлок Холмс" `);
-
+    return `Предлагаем вам почитать - "Шерлок Холмс" `;
 }else if (name==2 && userQuestion1 == true && userQuestion2 == false){
-
-console.log (`Предлагаем вам почитать - "Девушка в поезде" `);
-
+    return `Предлагаем вам почитать - "Девушка в поезде" `;
 }else{
-    console.log("К сожалению, не смогли подобрать вам книгу");
-
+    return "К сожалению, не смогли подобрать вам книгу";
 }
+}
+
+alert(f());
 
 </script>
 </body>
 </html>
+
 
