--- a/Homeworks/HW2.html
+++ b/Homeworks/HW2.html
@@ -131,18 +131,21 @@
 
 // 
 
-let name = prompt("Какой жанр предпочитаете? 1 - Роман, 2 -Детектив, 3 -  Фентези");
-
-
-while (name >= 1 && name<=3  ) {
-   console.log("мы запомнили ваш выбор")
-   break;
+let name = prompt("Какой жанр предпочитаете? 1 - Роман, 2 - Детектив, 3 - Фэнтези");
+do {
+if (name === "1") {
+alert("Вы предпочитаете жанр Роман");
+break;
+} else if (name === "2") {
+alert("Вы предпочитаете жанр Детектив");
+break;
+} else if (name === "3") {
+alert("Вы предпочитаете жанр Фэнтези");
+break;
+} else {
+name = prompt("Пожалуйста, выберите один из предложенных вариантов: 1 - Роман, 2 - Детектив, 3 - Фэнтези");
 }
-while (name=isNaN){
-    alert('вы ввели неверное значение. Попробуйте еще раз');
-    break;
-}
-
+} while (true);
 let userQuestion1 = confirm("Предпочитаете современную литературу?");
 let userQuestion2 = confirm("Хотели бы книгу русского автора?");
  
@@ -200,6 +203,5 @@ alert (`Предлагаем вам почитать - "Война и мир" `)
 </script>
 </body>
 </html>
-
 
 
