--- a/Homeworks/anketa_ter.html
+++ b/Homeworks/anketa_ter.html
@@ -11,25 +11,24 @@
 // с использованием условной операции (?:), без условного оператора (if). -->
 
 
-let lastName = prompt("Введите вашу фамилию:");
-let firstName = prompt("Введите ваше имя:");
-let middleName = prompt("Введите ваше отчество:");
-let age = prompt("Введите ваш возраст в годах:");
-let gender = confirm("Ваш пол - мужской?");
-let fullName = lastName + " " + firstName + " " + middleName;
-let ageInDays = age * 365;
-let futureAge = parseInt(age) + 5;
-let pension = (gender && age >= 55) || (!gender && age >= 55) ? "да" : "нет";
+// let lastName = prompt("Введите вашу фамилию:");
+// let firstName = prompt("Введите ваше имя:");
+// let middleName = prompt("Введите ваше отчество:");
+// let age = prompt("Введите ваш возраст в годах:");
+// let gender = confirm("Ваш пол - мужской?");
+// let fullName = lastName + " " + firstName + " " + middleName;
+// let ageInDays = age * 365;
+// let futureAge = parseInt(age) + 5;
+// let pension = (gender && age >= 55) || (!gender && age >= 55) ? "да" : "нет";
 
+// alert("Ваше ФИО: " + fullName +
+//  "\nВаш возраст в годах: " + age + 
+//  "\nВаш возраст в днях: " + ageInDays + 
+//  "\nЧерез 5 лет вам будет: " + futureAge +
+//   "\nВаш пол: " + (gender ? "мужской" : "женский") + 
+//   "\nВы на пенсии: " + pension);
 
-
-let = (gender == "мужской")  ? ' ваш пол - мужской' : 
-( gender == "женский") ? 'ваш пол - женский':
-  
- 
-  alert("Ваше ФИО: " + fullName + "\nВаш возраст в годах: " + age + "\nВаш возраст в днях: " + ageInDays + "\nЧерез 5 лет вам будет: " + futureAge + "\nВаш пол: " + (gender ? "мужской" : "женский") + "\nВы на пенсии: " + pension);
-
-    </script>
+//     </script>
     
     
 
